Syncing 'Functions' and 'Functional' from Java.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1784,9 +1784,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "862c52fd",
+   "metadata": {},
+   "source": [
+    "# Recursion\n",
+    "\n",
+    "Function calls __itself by name__ and there is __no TCO__."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24193250",
+   "id": "0000d4c3",
    "metadata": {},
    "outputs": [],
    "source": []
