--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1003,9 +1003,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58dd7548",
+   "metadata": {},
+   "source": [
+    "# Extension Methods\n",
+    "\n",
+    "Python doesn't directly have extension methods, but you can easily do the same thing by creating a function that takes `self` as the first arg and assigning it as an attribute of the class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "45908a3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "    def __repr__(self):\n",
+    "        return repr(self.val)\n",
+    "    \n",
+    "def my_extension(self):\n",
+    "    self.val *= 10\n",
+    "    \n",
+    "# adding the method to the class\n",
+    "MyClass.my_extension = my_extension\n",
+    "\n",
+    "m = MyClass(1)\n",
+    "print(m)\n",
+    "# call like any other method\n",
+    "m.my_extension()\n",
+    "print(m)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7773cf19",
+   "id": "9b79d25a",
    "metadata": {},
    "outputs": [],
    "source": []
