Syncing "Classes" and "Generics" sections.

--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1048,9 +1048,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcbf0d97",
+   "metadata": {},
+   "source": [
+    "# Default Constructor\n",
+    "\n",
+    "A class can be constructed without an `__init__` method.\n",
+    "\n",
+    "But any method called `__init__` will replace any other (due to no overloading in Python)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5f310ea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    def __repr__(self):\n",
+    "        return ''\n",
+    "\n",
+    "class MyOtherClass:\n",
+    "    def __init__(self, x):\n",
+    "        pass\n",
+    "    \n",
+    "class MyOtherOtherClass:\n",
+    "    def __init__(self): # this is uncallable!\n",
+    "        pass\n",
+    "    \n",
+    "    def __init__(self, x):\n",
+    "        pass\n",
+    "    \n",
+    "m = MyClass()\n",
+    "n = MyOtherClass(10)\n",
+    "o = MyOtherOtherClass(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc216b8",
+   "metadata": {},
+   "source": [
+    "# \"We Are All Robots\"\n",
+    "\n",
+    "Private variables work between instances of the same class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c835f6ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Robot:\n",
+    "    __x = 5\n",
+    "    \n",
+    "    def printOther(self, other):\n",
+    "        print(other.__x)\n",
+    "        \n",
+    "r1 = Robot()\n",
+    "r2 = Robot()\n",
+    "r1.printOther(r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3325220",
+   "metadata": {},
+   "source": [
+    "# Prototype-Based Inheritance Details\n",
+    "\n",
+    "Rather than an instance being a copy of the class data on instantiation, it is __dynamically forwarded to the class__.\n",
+    "\n",
+    "Any attributes directly set on an instance after creation will be used directly.  This allows you to add and replace methods and variables.\n",
+    "\n",
+    "Others will be forwarded to the class, which will in turn forward to the base class of that, etc. Because it goes backward and left-to-right, that is how diamond inheritance behavior comes about.  It is __dynamic__, rather than being a clone stamp.  If you modify the class's data after instance creation, instances will see updated values.\n",
+    "\n",
+    "`super()` is a way to get the superclass of the current class to call a method from the superclass in the derived version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "92d03bc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100,100,1\n",
+      "100\n",
+      "sub\n",
+      "1000\n",
+      "sub\n",
+      "1000\n",
+      "sub\n",
+      "5\n",
+      "sub\n",
+      "1000\n",
+      "<class '__main__.DerivedClass'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BaseClass:\n",
+    "    x = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.y = 1\n",
+    "        self.z = 1\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.x) + ',' + str(self.y) + ',' + str(self.z)\n",
+    "    \n",
+    "    def print_x(self):\n",
+    "        print(self.x)\n",
+    "        \n",
+    "class DerivedClass(BaseClass):\n",
+    "    x = 100\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.y = 100\n",
+    "\n",
+    "    def print_x(self):\n",
+    "        super().print_x()\n",
+    "        print('sub')\n",
+    "        \n",
+    "m = DerivedClass()\n",
+    "print(str(m))\n",
+    "m.print_x()\n",
+    "\n",
+    "n = DerivedClass()\n",
+    "DerivedClass.x = 1000 # affects it\n",
+    "n.print_x()\n",
+    "BaseClass.x = 10000 # doesn't affect it\n",
+    "n.print_x()\n",
+    "\n",
+    "m.x = 5\n",
+    "m.print_x()\n",
+    "print(DerivedClass.x)\n",
+    "\n",
+    "print(type(m))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1245078f",
+   "metadata": {},
+   "source": [
+    "# Static Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0b182dcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    @staticmethod\n",
+    "    def f():\n",
+    "        print('hi')\n",
+    "        \n",
+    "m = MyClass()\n",
+    "m.f()\n",
+    "MyClass.f()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf9e53a",
+   "metadata": {},
+   "source": [
+    "# Abstract Base Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f14f4b72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implementation of my_method\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class MyInterface(ABC):\n",
+    "    @abstractmethod\n",
+    "    def my_method(self):\n",
+    "        \"\"\"This is an abstract method that must be implemented in subclasses.\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "class ConcreteClass(MyInterface):\n",
+    "    def my_method(self):\n",
+    "        print(\"Implementation of my_method\")\n",
+    "\n",
+    "# Trying to instantiate MyInterface directly will result in an error\n",
+    "# my_interface = MyInterface()  # This would raise TypeError\n",
+    "\n",
+    "# Instantiating ConcreteClass which implements the abstract method\n",
+    "concrete_instance = ConcreteClass()\n",
+    "concrete_instance.my_method()  # This will work fine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "100c1f22",
+   "metadata": {},
+   "source": [
+    "# Hashing Fields of Objects\n",
+    "\n",
+    "Wrap them in a __tuple__ and hash that."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b79d25a",
+   "id": "74111393",
    "metadata": {},
    "outputs": [],
    "source": []
