Syncing 'stdlib' section before multithreading part.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -2761,9 +2761,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2729b49",
+   "metadata": {},
+   "source": [
+    "# Input\n",
+    "\n",
+    "The `input()` function will print the prompt, then place the cursor right after it (no extra spaces beyond what you print). Then everything the user enters until the newline (and not including the newline) is read in as a string variable.\n",
+    "\n",
+    "You do not need to `strip()` because of newline, but you may because of user entered space around a value.\n",
+    "\n",
+    "To process multiple values, use `split()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "381c87cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number: 1\n",
+      "Please enter multiple values: 1 2 3\n",
+      "1\n",
+      "[1, 2, 3]\n",
+      "Please enter a number: 0\n",
+      "0\n",
+      "<_io.TextIOWrapper name='<stdin>' mode='r' encoding='utf-8'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# input a single value\n",
+    "n = int(input(\"Please enter a number: \").strip()) # newline not included\n",
+    "\n",
+    "# input multiple values\n",
+    "vals = [int(x) for x in input(\"Please enter multiple values: \").strip().split()]\n",
+    "\n",
+    "print(n)\n",
+    "print(vals)\n",
+    "\n",
+    "# input in a loop that the user can choose to terminate\n",
+    "sum = 0\n",
+    "while True:\n",
+    "    delta = int(input(\"Please enter a number: \").strip())\n",
+    "    if delta == 0:\n",
+    "        break\n",
+    "    else:\n",
+    "        sum += delta\n",
+    "print(sum)\n",
+    "\n",
+    "# stdin\n",
+    "# input(\"Please enter a string: \", file=sys.stdin) # not allowed\n",
+    "print(sys.stdin)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde311a6",
+   "id": "d43b2f45",
    "metadata": {},
    "outputs": [],
    "source": []
