--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "22af5b27",
    "metadata": {},
    "outputs": [
@@ -437,14 +437,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/ipykernel_launcher.py', '-f', '/Users/davidpetrofsky/Library/Jupyter/runtime/kernel-74c214b1-9a3b-4ca4-9a9d-69fe3c1440db.json']\n",
+      "['/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/ipykernel_launcher.py', '-f', '/Users/davidpetrofsky/Library/Jupyter/runtime/kernel-a264e3c9-dde1-44d0-8aef-f7cc5b648e3c.json']\n",
       "<_io.TextIOWrapper name='<stdin>' mode='r' encoding='utf-8'>\n",
-      "<ipykernel.iostream.OutStream object at 0x103d8a170>\n",
-      "<ipykernel.iostream.OutStream object at 0x103d8a1a0>\n",
+      "<ipykernel.iostream.OutStream object at 0x10844afb0>\n",
+      "<ipykernel.iostream.OutStream object at 0x10844afe0>\n",
       "hello\n",
-      "['/Users/davidpetrofsky/repos/snippets/python', '/Users/davidpetrofsky/repos/projects', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python310.zip', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/lib-dynload', '', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages']\n",
+      "['/Users/davidpetrofsky/repos/snippets/python', '/Users/davidpetrofsky/repos/projects', '/Users/davidpetrofsky/repos/snippets/python', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python310.zip', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/lib-dynload', '', '/Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages']\n",
       "darwin\n",
-      "3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n"
+      "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:13) [Clang 14.0.6 ]\n",
+      "hello\n"
      ]
     }
    ],
@@ -473,7 +474,11 @@
     "print(sys.version)\n",
     "\n",
     "# Currently improted modules\n",
-    "#print(sys.modules) # not running because in jupyter it's too long"
+    "#print(sys.modules) # not running because in jupyter it's too long\n",
+    "\n",
+    "# Specifying a specific file to print to\n",
+    "# eg. sys.stdout, sys.stderr\n",
+    "print('hello', file=sys.stdout)"
    ]
   },
   {
@@ -1036,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
