Updating notebook with coalescing.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1794,9 +1794,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10188de4",
+   "metadata": {},
+   "source": [
+    "# Coalescing\n",
+    "\n",
+    "The `and` and `or` operators return the last value seen, although they make use of `__bool__` conversion to control short-circuiting and conditions.\n",
+    "\n",
+    "The `not` operator converts straight to boolean though."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad5b3bed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "print(x or 0)\n",
+    "\n",
+    "x = None\n",
+    "print(x or 0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0000d4c3",
+   "id": "a3fd5434",
    "metadata": {},
    "outputs": [],
    "source": []
