Adding info about field type annotations.

--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1292,9 +1292,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9a8601e",
+   "metadata": {},
+   "source": [
+    "# Uninitialized Class Variables\n",
+    "\n",
+    "There is no way to declare a class/instance variable without setting to a value.  You can give a __type hint__ like below, but it's not a real attribute until it's set in the constructor or elsewhere.  It's just a hint that the class will have this member.\n",
+    "\n",
+    "Type hints on the class will go into the class's __\\_\\_annotations\\_\\___ member, which can be read by decorators like `dataclass` to automatically give behavior to the fields."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2580807c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    # x  # ILLEGAL\n",
+    "    x: int # LEGAL, but not real (just type hint)\n",
+    "    \n",
+    "m = MyClass()\n",
+    "# print(m.x)  # fails\n",
+    "# print(MyClass.x) # fails"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74111393",
+   "id": "fa3f1571",
    "metadata": {},
    "outputs": [],
    "source": []
