Adding more functools members.

--- a/python/More Functional Stuff.ipynb
+++ b/python/More Functional Stuff.ipynb
@@ -218,9 +218,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d602e30",
+   "metadata": {},
+   "source": [
+    "# Partial Applications\n",
+    "\n",
+    "In addition, `partialmethod()` does the same thing but ignores (and doesn't bind) the `self` parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3b8c36fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "def f(x, y, z):\n",
+    "    return x + y + z\n",
+    "\n",
+    "g = partial(f, 1, 10)\n",
+    "\n",
+    "print(g(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "992e71d2",
+   "metadata": {},
+   "source": [
+    "# Other Interesting functools Members\n",
+    "\n",
+    "- `@cache` function decorator to __memoize__ the function automatically\n",
+    "  - eg. then you can make it recursive and automatically have it not repeat work\n",
+    "  - thread-safe\n",
+    "- `@total_ordering` class decorator\n",
+    "  - if you give at least one comparison operator plus `__eq__`, it will supply the rest of the comparisons"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6517e98",
+   "id": "aeda2b5b",
    "metadata": {},
    "outputs": [],
    "source": []
