--- a/python/More Functional Stuff.ipynb
+++ b/python/More Functional Stuff.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "992e71d2",
+   "id": "81947d02",
    "metadata": {},
    "source": [
     "# Other Interesting functools Members\n",
@@ -267,9 +267,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0b7c84e",
+   "metadata": {},
+   "source": [
+    "# Other Interesting itertools Members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "22329953",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (2, 3), (3, 4), (4, 5)]\n",
+      "[(1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "print(list(itertools.pairwise(l)))\n",
+    "print(list(itertools.product(l, l)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeda2b5b",
+   "id": "cd257ff2",
    "metadata": {},
    "outputs": [],
    "source": []
