Adding rest of ToDo items in python sheet.

--- a/python/More Functional Stuff.ipynb
+++ b/python/More Functional Stuff.ipynb
@@ -298,9 +298,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3d77732",
+   "metadata": {},
+   "source": [
+    "# Fibonacci Example\n",
+    "\n",
+    "Other possibilities:\n",
+    "  - compute in a list\n",
+    "  - memoize a recursive function\n",
+    "  \n",
+    "NOTE: generators aren't subscriptable, so you have to use `itertools.islice` on them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "31644c9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import islice\n",
+    "\n",
+    "def fibonacci():\n",
+    "    last1 = 0\n",
+    "    last2 = 1\n",
+    "    \n",
+    "    while True:\n",
+    "        yield last2\n",
+    "        temp = last2\n",
+    "        last2 = last1 + last2\n",
+    "        last1 = temp\n",
+    "        \n",
+    "print(list(islice(fibonacci(), 10)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38ebdff4",
+   "metadata": {},
+   "source": [
+    "# Counting Lazy Items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2f238406",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list(x**2 for x in range(10))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f870dd",
+   "metadata": {},
+   "source": [
+    "# Chess Queen Attacks Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30f087d5",
+   "metadata": {},
+   "source": [
+    "   - to avoid writing 8 nasty for loops\n",
+    "   - create generators for the 8 directions of infinite movement from a point\n",
+    "      - 1-dimensional generators zipped together\n",
+    "   - itertools.takewhile() based on boundary validity and problem criteria\n",
+    "   - len(list(seq)) after doing those filters (and sum the 8)\n",
+    "   -\n",
+    "   - the iterative alternative is 8 for loops, each with either nesting or hardcoding one of the variables\n",
+    "   - then each for loop has to check other criteria (like if hits obstacles) and bail\n",
+    "   - then just increment count each non-bailed iteration\n",
+    "   - conceptually the same but uglier, more repetitive, and have to craft each loop w/ copy/paste\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd257ff2",
+   "id": "15872bcb",
    "metadata": {},
    "outputs": [],
    "source": []
