Implementing some more Python research items.

--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6e76fcad",
    "metadata": {},
    "outputs": [],
@@ -106,6 +106,9 @@
     "        pass\n",
     "\n",
     "    def __del__(self):  # Destructor\n",
+    "        pass\n",
+    "    \n",
+    "    def __new__(cls): # higher-level creation than __init__\n",
     "        pass"
    ]
   },
@@ -1320,9 +1323,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0c061eb",
+   "metadata": {},
+   "source": [
+    "# Slice Operator\n",
+    "\n",
+    "`slice` is actually a built-in top-level data type, automatically insantiated and passed in when you do `a[2:3]` for instance.\n",
+    "\n",
+    "So when you overload `__getitem__` and `__setitem__`, you can use `isinstance(key, slice)` to tell if it's a slice vs. an index (`isinstance(key, int)`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8811e039",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slice(2, 3, None)\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = slice(2, 3)\n",
+    "print(s)\n",
+    "print(isinstance(s, slice))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa3f1571",
+   "id": "572ec312",
    "metadata": {},
    "outputs": [],
    "source": []
