--- a/python/More Functional Stuff.ipynb
+++ b/python/More Functional Stuff.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2f238406",
    "metadata": {},
    "outputs": [
@@ -359,12 +359,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "10\n",
       "10\n"
      ]
     }
    ],
    "source": [
-    "print(len(list(x**2 for x in range(10))))"
+    "print(len(list(x**2 for x in range(10))))  # makes a temporary list\n",
+    "\n",
+    "print(sum(1 for _ in (x**2 for x in range(10)))) # in-place"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b81019",
+   "metadata": {},
+   "source": [
+    "# Statefulness/Consumption of Generator\n",
+    "\n",
+    "A generator has items consumed as you iterate though it.  You can continue to consume items if not all have been consumed yet. To start over from the beginning, you have to create the generator again (eg. by calling the function).\n",
+    "\n",
+    "Some functions, like `list()` and `for` obviously consume items.  `itertools` is more subtle because it's lazy.  `itertools.slice()` doesn't itself consume anything, but once you make it eager (eg. with `list()`) then it does."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1016738a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def gen():\n",
+    "    for i in range(5):\n",
+    "        yield i + 1\n",
+    "\n",
+    "g = gen()\n",
+    "\n",
+    "l = list(g)\n",
+    "print(l)\n",
+    "\n",
+    "l = list(g)\n",
+    "print(l)  # empty because already consumed\n",
+    "\n",
+    "g = gen()\n",
+    "l = list(g)\n",
+    "print(l)  # refreshed because created again\n",
+    "\n",
+    "for item in g:\n",
+    "    pass\n",
+    "l = list(g)\n",
+    "print(l)   # empty again\n",
+    "\n",
+    "g = gen() # refresh\n",
+    "itertools.islice(g, 3)\n",
+    "l = list(g)\n",
+    "print(l)  # still full\n",
+    "\n",
+    "g = gen()\n",
+    "list(itertools.islice(g, 3))\n",
+    "l = list(g)\n",
+    "print(l)  # missing 3 items because of the slice"
    ]
   },
   {
