--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -973,13 +973,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "1fb46ad0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "\n",
+    "# import asyncio # needed if you do the last line\n",
     "\n",
     "# Note the return type is still the synchronous one.\n",
     "# But asyncio lets us put 'async' in front.\n",
@@ -1923,9 +1922,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eee82d05",
+   "metadata": {},
+   "source": [
+    "# json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "813d86aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"name\": \"Jane Smith\",\n",
+      "  \"age\": 25,\n",
+      "  \"is_employee\": false\n",
+      "}\n",
+      "\n",
+      "{\n",
+      "  \"name\": \"Jane Smith\",\n",
+      "  \"age\": 25,\n",
+      "  \"is_employee\": false\n",
+      "}\n",
+      "\n",
+      "{'name': 'Jane Smith', 'age': 25, 'is_employee': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import sys\n",
+    "\n",
+    "data = {\n",
+    "    \"name\": \"Jane Smith\",\n",
+    "    \"age\": 25,\n",
+    "    \"is_employee\": False\n",
+    "}\n",
+    "\n",
+    "# files\n",
+    "json.dump(data, sys.stdout, indent=2)\n",
+    "print()\n",
+    "print()\n",
+    "# data = json.load(somefile)\n",
+    "\n",
+    "# strings\n",
+    "d = json.dumps(data, indent=2)\n",
+    "print(d)\n",
+    "print()\n",
+    "print(json.loads(d))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96ec94b",
+   "id": "29153186",
    "metadata": {},
    "outputs": [],
    "source": []
