Adding 'numpy' to python cheat sheet.

--- a/numpy/Basics.ipynb
+++ b/numpy/Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7d9ecc85",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4a4fa1e3",
    "metadata": {},
@@ -22,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e7277efc",
    "metadata": {},
@@ -33,7 +31,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "17db59ed",
    "metadata": {},
@@ -58,7 +55,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7185f0aa",
    "metadata": {},
@@ -91,7 +87,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9fe40672",
    "metadata": {},
@@ -126,7 +121,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6163a50b",
    "metadata": {},
@@ -158,7 +152,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c7e69cfb",
    "metadata": {},
@@ -216,7 +209,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2d1512e0",
    "metadata": {},
@@ -297,7 +289,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "de8c7866",
    "metadata": {},
@@ -564,7 +555,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7314b658",
    "metadata": {},
@@ -574,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 3,
    "id": "460933f2",
    "metadata": {},
    "outputs": [
@@ -599,7 +589,7 @@
    "source": [
     "np.random.seed(42)\n",
     "\n",
-    "# These sample betwee [0,1) in uniform distribution\n",
+    "# These sample between [0,1) in uniform distribution\n",
     "print(np.random.random_sample((3, 2)))\n",
     "print()\n",
     "print(np.random.random((3, 2)))\n",
@@ -610,7 +600,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4d07de3c",
    "metadata": {},
@@ -810,7 +799,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aa575738",
    "metadata": {},
@@ -876,7 +864,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7298fd6f",
    "metadata": {},
@@ -912,7 +899,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7c6e77ec",
    "metadata": {},
@@ -1002,7 +988,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ba760966",
    "metadata": {},
@@ -1057,7 +1042,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "166e5835",
    "metadata": {},
@@ -1194,7 +1178,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b49be857",
    "metadata": {},
@@ -1265,7 +1248,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a351eeaa",
    "metadata": {},
@@ -1310,7 +1292,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "203e224c",
    "metadata": {},
@@ -1390,7 +1371,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f44dfdb5",
    "metadata": {},
@@ -1471,7 +1451,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "51cf1fde",
    "metadata": {},
@@ -1510,7 +1489,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "610eddb9",
    "metadata": {},
@@ -1523,7 +1501,7 @@
     "\n",
     "When numpy expects two or more arrays and gets a mismatch in shapes, this is how they're reshaped to match for the operation:\n",
     "\n",
-    "1. If one is a scalar, make that into an array with same # of dimensions, all with size 1. You are done.\n",
+    "1. If one is a scalar, make that into an array with same # of dimensions, all with size 1.\n",
     "1. Otherwise, add a dimension of size 1 to the **left** of the object with smaller shape.\n",
     "1. For each dimension from right to left:\n",
     "   1. If they are equal, keep going.\n",
@@ -1710,7 +1688,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dec07a8f",
    "metadata": {},
@@ -1719,7 +1696,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "11708e9f",
    "metadata": {},
@@ -1770,7 +1746,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8351b3f6",
    "metadata": {},
@@ -1810,7 +1785,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8d466679",
    "metadata": {},
@@ -1846,7 +1820,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "02e6eb0d",
    "metadata": {},
@@ -1893,7 +1866,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cc13353e",
    "metadata": {},
@@ -1997,7 +1969,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e7493978",
    "metadata": {},
@@ -2045,7 +2016,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "391467db",
    "metadata": {},
@@ -2079,7 +2049,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0f002e59",
    "metadata": {},
@@ -2108,7 +2077,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "90eef377",
    "metadata": {},
@@ -2121,7 +2089,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "765aad87",
    "metadata": {},
@@ -2133,7 +2100,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d6554944",
    "metadata": {},
@@ -2144,7 +2110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "86f91d60",
    "metadata": {},
@@ -2155,7 +2120,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "02403c0e",
    "metadata": {},
@@ -2166,9 +2130,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea1d8fe8",
+   "metadata": {},
+   "source": [
+    "# np.int64 vs. int (and others)\n",
+    "\n",
+    "`numpy` has its own versions of the primitive numeric types.  When you pass in a `dtype=int` for instance, internally, the elements become `np.int64`.  When you get individual items from arrays via indexing, you are getting that type.\n",
+    "\n",
+    "An `np.int64` acts like an `int` in every way, except `isinstance(x, int)` will return `False` for it.\n",
+    "\n",
+    "An `np.int64` is also a __numpy array__ of shape `()` (a scalar).\n",
+    "\n",
+    "You can get the real `int` object via `x.item()` or `int(x)`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f077a84",
+   "id": "4c1aa7d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2190,7 +2170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
