--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1356,9 +1356,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5ed3297",
+   "metadata": {},
+   "source": [
+    "# Multidimensional Indices\n",
+    "\n",
+    "When you use commas between slices or indices in an index operator, you are passing a `tuple` to the operator method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "754520d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slice(2, 3, None)\n",
+      "<class 'slice'>\n",
+      "(slice(2, 3, None), 1)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __getitem__(self, index):\n",
+    "        print(index)\n",
+    "        print(type(index))\n",
+    "    \n",
+    "m = MyClass()\n",
+    "m[2:3]\n",
+    "m[2:3,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f2f9fdf",
+   "metadata": {},
+   "source": [
+    "# Right-Side Operators\n",
+    "\n",
+    "If your class is on the right side of an operator instead of the left, then the type on the left will be called instead at first.  If that type returns `NotImplemented`, then your class's `__radd__` (for instance, for adding) will be called."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572ec312",
+   "id": "23393af3",
    "metadata": {},
    "outputs": [],
    "source": []
