--- a/numpy/Basics.ipynb
+++ b/numpy/Basics.ipynb
@@ -2146,9 +2146,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "182276e5",
+   "metadata": {},
+   "source": [
+    "# tolist()\n",
+    "\n",
+    "numpy array back to python list (of lists, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "592144ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[[1, 2, 3], [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "l = a.tolist()\n",
+    "print(type(l))\n",
+    "print(l)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1aa7d0",
+   "id": "0c2b7e7d",
    "metadata": {},
    "outputs": [],
    "source": []
